Fix cutting off content on resume zoom

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -163,9 +163,6 @@ $PrimaryColor: #06e332;
       margin-right: auto;
     }
     .resumeContainer {
-      display: flex;
-      justify-content: center;
-      align-items: center;
       height: 75vh;
       max-width: 600px;
       overflow: auto;
